# Todo

./: README.md
backend/: pyproject.toml  realm_config.json
backend/data_sources/mongodb-atlas/: config.json
frontend/: package-lock.json
frontend/src/: realm.json
todo-frontend/: package-lock.json  package.json
